--- a/e-commerce/src/assets/Components/LatestProduct/latestProduct.scss
+++ b/e-commerce/src/assets/Components/LatestProduct/latestProduct.scss
@@ -27,7 +27,9 @@
         }
     }
     .productCard{
-        display: flex;
+          display: grid;
+          grid-template-columns: repeat(3, minmax(0, 1fr));
+
         flex-wrap: wrap;
         justify-content: center;
         gap: 40px;
