--- a/e-commerce/src/assets/Layout/Header/header.scss
+++ b/e-commerce/src/assets/Layout/Header/header.scss
@@ -1,30 +1,33 @@
 
     .header{
-        width: 100%;
+    width: 100%;
     position: fixed;
     top: 0; 
     z-index: 1000; 
-    padding: 10px;
+    padding: 8px;
     background-color: white;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+
      
        
     
         .container{
-            display: flex;
+            display: grid;
+            grid-template-columns: repeat(3, minmax(0, 1fr));
+
             justify-content: space-between;
             align-items: center;
-            width: 1250px;
+            width: 1300px;
             margin: 0 auto;
-            padding: 5px;
+            padding: 5px 8px;
             
     
             .header-title{
-                width: 215px;
+                width: 235px;
                  a{
                     text-decoration: none;
                     font-size: 24px;
-                    padding: 5px 8px;
+                    // padding: 5px 8px;
                     color: #000000E6;
                     
                  }
