--- a/e-commerce/src/assets/Components/CardProduct/cardProduct.scss
+++ b/e-commerce/src/assets/Components/CardProduct/cardProduct.scss
@@ -1,47 +1,61 @@
-.card-item{
-        margin-top: 20px;
+.productCard {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 40px;
+}
+
+.card-item {
+    width: 400px;
+    margin-top: 20px;
     box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-    .card-item-img{
-        width: 330px;
+
+    .card-item-img {
+        width: 370px;
         line-height: 0%;
         padding: 10px;
-         
-        img{
+
+        img {
             width: 100%;
             height: 250px;
             background-size: cover;
             background-repeat: no-repeat;
         }
-        
+
     }
-    h5{
+
+    h5 {
         font-size: 20px;
         color: #212529;
     }
-    p{
+
+    p {
 
         font-size: 16px;
         color: #212529;
     }
-    
-    .card-item-btn{
+
+    .card-item-btn {
         display: flex;
         justify-content: center;
         align-items: center;
         gap: 20px;
         padding: 15px;
-          button{
+
+        button {
             padding: 6px 12px;
             border-radius: 5px;
             background-color: #212529;
             color: #ffffff;
             border: 1px solid #212529;
-            &:hover{
+
+            &:hover {
                 background-color: #212529d6;
                 border: 1px solid #212529d6;
-    
-              }
-          }
-          
+
+            }
+        }
+
     }
 }
